# OmniAgent

./: .env.example  AGENTS.md  README.md  pyproject.toml
docs/: repo-understanding.md
src/omniagent/: __init__.py  config.py  constants.py  domain_protocols.py  protocols.py  session_manager.py
src/omniagent/ai/: runner.py
src/omniagent/ai/agents/: agent.py
src/omniagent/ai/providers/: __init__.py  llm_provider.py
src/omniagent/ai/tools/: tools.py
src/omniagent/api/: __init__.py
src/omniagent/api/dto/: __init__.py  chat.py
src/omniagent/constants/: __init__.py  openai_events.py  streaming.py
src/omniagent/constants/llm/: __init__.py  general.py  models.py  openai.py
src/omniagent/db/: __init__.py  document_models.py  mongo.py
src/omniagent/db/mongo/: __init__.py  mongo.py  (+1 more)
src/omniagent/exceptions/: __init__.py  agent.py  agent_exceptions.py  base.py  database.py  db_exceptions.py  openai_exceptions.py  provider.py  redis_exceptions.py  schema_exceptions.py
src/omniagent/persistence/: __init__.py  api.py  context.py  contracts.py  model_contracts.py  runtime.py  types.py
src/omniagent/schemas/: __init__.py  message.py  session.py  summary.py  user.py
src/omniagent/session/: __init__.py  base.py  chat_name.py  mongo.py  postgres.py
src/omniagent/tracing/: __init__.py  context.py  decorators.py  graph.py  helpers.py  instrumentation.py  runtime.py
src/omniagent/types/: __init__.py  chat.py  feedback.py  llm.py  message.py  state.py  summary.py  user.py
src/omniagent/utils/: __init__.py  general.py  logger.py  streaming.py  tracing.py
(+47 files in other folders)
